test/success/nostd/mono/structs/main.sk
module Main {

struct Foo[T] {
    value: T
}

struct Bar {}

struct Baz {}

fn main() {
    let a = Foo(Bar());
    let b = Foo(Baz());
}

}