test/errors/dropcheck/already_moved_field1/main.sk
module Main {

struct C {

}

struct Bar {
    value: C
    value2: C
}

struct Foo {
    bar: Bar
}

fn func[T](i: T) {

}

fn main() {
    let f = Foo(Bar(C(), C()));
    func(f.bar.value);
    func(f);
}

}
